--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+	box-sizing: border-box;
+}
 
 body{
     margin: 0;
@@ -30,18 +33,56 @@ main>div:nth-child(1){
     background-color: #0ff;
 	flex: 1 1 auto;
 }
+main>div:hover:nth-child(1) + div {
+    background-color: #0ff;
+}
+main>div:hover:nth-child(1) + div + div {
+    background-color: #0dd;
+}
+main>div:hover:nth-child(1) + div + div + div {
+    background-color: #0aa;
+}
+main>div:hover:nth-child(1) + div + div + div + div {
+    background-color: #088;
+}
+
+
 main>div:nth-child(2){
     background-color: #0dd;
 	flex: 1 1 auto;
 }
+main>div:hover:nth-child(2) + div {
+    background-color: #0dd;
+}
+main>div:hover:nth-child(2) + div + div {
+    background-color: #0aa;
+}
+main>div:hover:nth-child(2) + div + div + div {
+    background-color: #088;
+}
+
+
 main>div:nth-child(3){
     background-color: #0aa;
 	flex: 1 1 auto;
 }
+main>div:hover:nth-child(3) + div {
+    background-color: #0aa;
+}
+main>div:hover:nth-child(3) + div + div {
+    background-color: #088;
+}
+
+
 main>div:nth-child(4){
     background-color: #088;
 	flex: 1 1 auto;
 }
+main>div:hover:nth-child(3) + div {
+    background-color: #088;
+}
+
+
 main>div:nth-child(5){
     background-color: #066;
 	flex: 1 1 auto;
